# MidExpr

./: .gitignore  CMakeLists.txt  CMakePresets.json  MidExpr.sln  MidExpr.slnx  README.md
Benchmark/: Benchmark.csproj  FibRec1.cs
MidExpr/: CMakeLists.txt  MidExpr.csproj  MidFunc.cs  MidFunc2.cs  MidFunc3.cs  MidInterpreter.cs  MidInterpreter2.cs  MidInterpreter2.m.cs  MidInterpreter2.tt  MidInterpreter3.cs  MidPrimitive.cs  MidType.cs  OpCode.cs  OpCode2.cs  OpCode2.tt  Utils.cs
MidExpr/Native/: Defines.h  Func.cc  Func.h  Interpreter.cc  Interpreter.h  Interpreter.tt  OpCode.h  OpCode.tt  lib.h
Test1/: Test1.csproj  UnitTest1.cs
Test1/Properties/: launchSettings.json
